--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <script src="gravity.js"></script>
+    <!-- <script src="gravity.js"></script> !-->
     <!-- <script src="particle"></script> !-->
-    <!-- <link rel="stylesheet" href="style.css"> !-->
+    <link rel="stylesheet" href="style.css">
 </body>
 
 </html>
+
