Update index.html with additional script comments

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <body>
     <canvas id="canvas"></canvas>
     <!-- <script src="gravity.js"></script> !-->
-    <!-- <script src="particle"></script> !-->
+    <!-- <script src="particle.js"></script> !-->
+    <!-- <script src="line-to-mouse.js"></script> !-->
     <link rel="stylesheet" href="style.css">
 </body>
 
 </html>
+
 
